--- a/CS/RefreshOnTimer/MainWindow.xaml
+++ b/CS/RefreshOnTimer/MainWindow.xaml
@@ -3,15 +3,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
         xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
         xmlns:local="clr-namespace:WpfApp6"
+        xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
         <local:ViewModel/>
     </Window.DataContext>
+    <dxmvvm:Interaction.Behaviors>
+        <dxmvvm:EventToCommand EventName="Closed" Command="{Binding DisposeViewModelCommand}"/>
+    </dxmvvm:Interaction.Behaviors>
     <Window.Resources>
         <Style x:Key="NumericGridColumnStyle" TargetType="dxg:GridColumn">
             <Setter Property="EditSettings">
@@ -25,8 +28,7 @@
     <Grid>
         <dxg:GridControl ShowBorder="False"
                          ItemsSource="{Binding Source}"
-                         FilterString="([Last] >= 400)"
-                         SelectionMode="MultipleRow">
+                         FilterString="([Last] >= 400)">
             <dxg:GridControl.View>
                 <dxg:TableView AllowEditing="False" ShowFixedTotalSummary="True" AllowDragDrop="True"  KeepViewportOnDataUpdate="True"/>
             </dxg:GridControl.View>
