--- a/CS/RefreshOnTimer/App.xaml
+++ b/CS/RefreshOnTimer/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfApp6.App"
+﻿<Application x:Class="RefreshOnTimer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApp6"
+             xmlns:local="clr-namespace:RefreshOnTimer"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
