--- a/CS/RefreshOnTimer/MainWindow.xaml
+++ b/CS/RefreshOnTimer/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfApp6.MainWindow"
+﻿<Window x:Class="RefreshOnTimer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-        xmlns:local="clr-namespace:WpfApp6"
+        xmlns:local="clr-namespace:RefreshOnTimer"
         xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
